# ChangeLog for dev-perl/TimeDate
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/TimeDate/ChangeLog,v 1.39 2012/04/26 01:42:31 jer Exp $

  26 Apr 2012; Jeroen Roovers <jer@gentoo.org> TimeDate-1.200.0.ebuild:
  Stable for HPPA (bug #400247).

  23 Apr 2012; Brent Baude <ranger@gentoo.org> TimeDate-1.200.0.ebuild:
  Marking TimeDate-1.200.0 ppc64 for bug 400247

  22 Apr 2012; Markus Meier <maekke@gentoo.org> TimeDate-1.200.0.ebuild:
  x86 stable, bug #400247

  22 Apr 2012; Agostino Sarubbo <ago@gentoo.org> TimeDate-1.200.0.ebuild:
  Stable for amd64, wrt bug #400247

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -TimeDate-1.20.ebuild:
  Cleanup

*TimeDate-1.200.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org> +TimeDate-1.200.0.ebuild:
  Change version scheme

  07 Dec 2010; Matt Turner <mattst88@gentoo.org> TimeDate-1.20.ebuild:
  Added ~mips, bug 243346.

  14 Jan 2010; Fabian Groffen <grobian@gentoo.org> TimeDate-1.20.ebuild:
  Transfer Prefix keywords

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -TimeDate-1.19.ebuild:
  Cleanup

*TimeDate-1.20 (14 Dec 2009)

  14 Dec 2009; Torsten Veller <tove@gentoo.org> +TimeDate-1.20.ebuild:
  Version bump

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -TimeDate-1.17.ebuild:
  Cleanup

*TimeDate-1.19 (26 Sep 2009)

  26 Sep 2009; Torsten Veller <tove@gentoo.org> -TimeDate-1.18.ebuild,
  +TimeDate-1.19.ebuild:
  Version bump. Cleanup

*TimeDate-1.18 (25 Sep 2009)

  25 Sep 2009; Torsten Veller <tove@gentoo.org> +TimeDate-1.18.ebuild:
  Version bump

*TimeDate-1.17 (20 Sep 2009)

  20 Sep 2009; Torsten Veller <tove@gentoo.org> +TimeDate-1.17.ebuild:
  Version bump

  23 Feb 2008; Jeroen Roovers <jer@gentoo.org> TimeDate-1.16.ebuild:
  Stable for HPPA.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org> TimeDate-1.16.ebuild:
  Version bump, thanks seemant

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org> TimeDate-1.16.ebuild: