@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.157 2012/04/25 21:00:56 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.159 2012/04/29 16:12:42 maekke Exp $
+
+  29 Apr 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.3-r200.ebuild:
+  x86 stable, bug #410611
+
+  29 Apr 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.3-r300.ebuild:
+  x86 stable, bug #410611
 
   25 Apr 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.6.3-r200.ebuild:
   arm stable, bug #410611
