@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/TimeDate
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/TimeDate/ChangeLog,v 1.39 2012/04/26 01:42:31 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/TimeDate/ChangeLog,v 1.40 2012/04/29 16:34:49 maekke Exp $
+
+  29 Apr 2012; Markus Meier <maekke@gentoo.org> TimeDate-1.200.0.ebuild:
+  arm stable, bug #400247
 
   26 Apr 2012; Jeroen Roovers <jer@gentoo.org> TimeDate-1.200.0.ebuild:
   Stable for HPPA (bug #400247).
